# py-project-3

./: .gitignore  README.md  pyproject.toml
src/py_project_3/: config.py  create_tables.py  create_tables_4.py  gen_data_4.py  gen_data_p1_3.py  gen_data_p2.py  import_data_4.py  optimization_4.py  queries_explain_4.py  report_procedures_4.py
tests/: test_data.py  test_relationships.py
