[project]
name = "py-project-3"
version = "0.1.0"
description = ""
authors = [
    {name = "JKC-013",email = "khiemvinhtran1112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=40.15.0,<41.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]

[tool.poetry]
packages = [{include = "py_project_3", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
